Added team ranked section to lightning

--- a/lightning.html
+++ b/lightning.html
@@ -957,6 +957,95 @@
                     This is actually a net improvement to your damage, but it comes at
                     a steep cost in terms of mobility, which is your highest priority
                     when kiting or chasing a target.
+                <h3 id="teamranked">Team Ranked with Convection</h3>
+                <p>Yes I&apos;m aware team ranked has been removed, but the term is
+                    still useful to identify competitive tank/heal arenas with good
+                    players on both sides. In this style of play, you&apos;re unlikely
+                    to be allowed to freecast
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                    and
+                    <span class="sprite sprite-crushing-darkness">Crushing Darkness</span>
+                    at will, outside of
+                    <span class="sprite sprite-polarity-shift">Polarity Shift</span>.
+                    Therefore we will need to make some adjustments to our priority
+                    in order to ensure we keep cleave damage and survivability going
+                    out without delay, preventing ourselves from being shut down and
+                    easily killed.</p>
+                <p>The first thing to note, which will be obvious to experienced
+                    sorc players: save
+                    <span class="sprite sprite-polarity-shift">Polarity Shift</span>
+                    to be used on whitebar, unless you literally are not being
+                    stunned. A stun chain can easily keep you inert during your
+                    interrupt immunity and damage boost window, which is a massive
+                    penalty to your damage. In more scrappy contexts we will normally
+                    use polarity immediately in the opener to hit the target for an
+                    80k
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                    before they have the chance react. This is far less effective in
+                    team ranked because ultimately this mode is about sustained
+                    damage and sustained mitigation. Also, your initial 80k will be
+                    healed off almost immediately while you sit a pull/double carb
+                    for the rest of your polarity shift window, if you get it off at
+                    all. Therefore, your opener is more likely going to look like
+                    placing
+                    <span class="sprite sprite-affliction">Affliction</span>
+                    on all 4 targets (or 3, if one of the non-primary targets will
+                    continuously purge it, like a leth op), getting pulled into the
+                    group, and breaking the carbonize (which should whitebar you) to
+                    <span class="sprite sprite-force-speed">Force Speed</span>
+                    out of the group and THEN AND ONLY THEN pop
+                    <span class="sprite sprite-polarity-shift">Polarity Shift</span>
+                    to do a nuclear opener. If you want to be cheeky, you can use a
+                    <span class="sprite sprite-volt-rush">Volt Rush</span>
+                    in the air as you&apos;re getting pulled in to get a free
+                    <span class="sprite sprite-chain-lightning">Chain Lightning</span>
+                    proc that you can spend your <strong>Gathering Storm</strong>
+                    buff on as you sprint out of the group.</p>
+                <h4>Damage Priority</h4>
+                <ol>
+                    <li>Proc
+                        <span class="sprite sprite-chain-lightning">Chain Lightning</span>
+                        with
+                        <span class="sprite sprite-thundering-blast">Thundering Blast</span>,
+                        <span class="sprite sprite-lightning-bolt">Lightning Bolt</span>, or
+                        <span class="sprite sprite-force-storm">Force Storm</span>
+                        every 9 seconds</li>
+                    <li>Spend natural
+                        <span class="sprite sprite-chain-lightning">Chain Lightning</span>
+                        proc and re-proc with
+                        <span class="sprite sprite-volt-rush">Volt Rush</span></li>
+                    <li>Keep
+                        <span class="sprite sprite-static-barrier">Static Barrier</span>
+                        on cooldown</li>
+                    <li>Maintain <strong>Fulgrous Fortification</strong> (DR) stacks with
+                        <span class="sprite sprite-lightning-bolt">Lightning Bolt</span></li>
+                    <li><span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                        if you can successfully cast it (use judgement)</li>
+                    <li>Re-<span class="sprite sprite-affliction">Affliction</span>
+                        targets where it&apos;s dropped</li>
+                    <li><span class="sprite sprite-lightning-flash">Lightning Flash</span></li>
+                    <li><span class="sprite sprite-volt-rush">Volt Rush</span>-procd
+                        <span class="sprite sprite-chain-lightning">Chain Lightning</span></li>
+                    <li><span class="sprite sprite-lightning-bolt">Lightning Bolt</span></li>
+                </ol>
+                <p>You can float your second
+                    <span class="sprite sprite-chain-lightning">Chain Lightning</span>
+                    proc from
+                    <span class="sprite sprite-volt-rush">Volt Rush</span>
+                    fairly freely in order to prioritize other abilities, but always
+                    spend it before re-proccing. You may also notice that
+                    <span class="sprite sprite-crushing-darkness">Crushing Darkness</span>
+                    does not make an appearance here. That&apos;s because the damage
+                    it does is simply not worth the incoming damage you take to stand
+                    still and cast it, considering that if the dot is purged, the
+                    initial damage is less than that of
+                    <span class="sprite sprite-lightning-bolt">Lightning Bolt</span>,
+                    and that if it gets interrupted it does zero damage. You may want
+                    to occasionally send one out, such as under
+                    <span class="sprite sprite-polarity-shift">Polarity Shift</span>,
+                    in order to apply the vulnerable debuff to targets, but this is
+                    of very little importance in the grand scheme.
+                </p>
             </section>
             <hr />
             <footer>
