Corruption: update to-do list

--- a/corruption.html
+++ b/corruption.html
@@ -455,9 +455,13 @@
                     strategy.</p>
             </section>
             <hr />
-            <h3>Kiting</h3>
+            <h3>Kiting / Damage Separation</h3>
             <h3>Peeling</h3>
-            <h3>Bubble Stun</h3>
+            <h3>T/H Mechanics</h3>
+            <h4>Hardcast vs. Instant Cast Reviv</h4>
+            <h4>Bubble Stun Abuse</h4>
+            <h4>Positioning to Hardcast</h4>
+            <h4>Focus Target & Interrupting Enemy Healers</h4>
             <hr />
             <section id="defense">
                 <h2>Defense</h2>
